# python_package_study

./: .bumpversion.cfg  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/scripts/: migrate_releases.py
.github/workflows/: ci-cd.yml  migrate-releases-to-packages.yml  publish.yml  release.yml
genericpkg/: __init__.py
tests/: test_genericpkg.py
