[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genericpkg"
dynamic = ["version"]
description = "A generic Python package for testing workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=1.23.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "bumpver>=2023.1126",
    "flake8>=6.0.0,<8.0.0",
    "black>=23.0.0,<26.0.0",
    "mypy>=1.0.0,<2.0.0",
]

[tool.setuptools]
packages = ["genericpkg"]

[tool.setuptools.dynamic]
version = {attr = "genericpkg.__version__.__version__"}

