[metadata]
name = genericpkg
version = attr: genericpkg.__version__.__version__
description = A generic Python package for testing workflows
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
python_requires = >=3.8